--- a/app/views/5/verification-report/defendant-details.html
+++ b/app/views/5/verification-report/defendant-details.html
@@ -11,7 +11,7 @@
             <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="defendant-details">Defendant details</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offence-information">Offences</a>
             </li>
             <li class="app-subnav__section-item">
@@ -20,7 +20,6 @@
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="common-data">Common data</a>
             </li>
-
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">Suitability for unpaid work</a>
             </li>
