--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -117,10 +117,12 @@
               <label class="govuk-label govuk-label--m" for="more-detail">
                 Supporting comments</label>
             </h1>
-            <div id="electronic-monitoring-supporting-hint" class="govuk-hint">Include
-              information here that supports your professional judgement.
-              <br/>You should include anything of concern that you have considered and how it has affected your recommendation.
-              <br/>This will not be published in the final report but it will be recorded.</div>
+            <div id="electronic-monitoring-supporting-hint" class="govuk-hint">
+              Include information here that supports your professional judgement.
+              <br/><br/>You should include anything of concern that you have
+              considered and how it has affected your recommendation.<br/><br/>
+              This will not be published in the final report but it will be
+              recorded.</div>
             <textarea class="govuk-textarea" id="supporting-information-electronic-monitoring" name="supporting-information-electronic-monitoring" rows="5" aria-describedby="supporting-information-electronic-monitoring-hint">{{data['supporting-information-electronic-monitoring']}}</textarea>
           </div>
           <div class="govuk-button-group">
