--- a/app/views/6/verification-report/confirmation.html
+++ b/app/views/6/verification-report/confirmation.html
@@ -3,42 +3,45 @@
 {% set pageName="Report published" %}
 
 {% block content %}
-  <div class="app-split-pane app-width-container">
-    <main id="main-content" class="app-content" role="main">
-      <div class="govuk-panel govuk-panel--confirmation">
-        <h1 class="govuk-panel__title">
-          Report published
-        </h1>
-        <div class="govuk-panel__body">
-          Dylan Adam Armstrong<br/>
-          CRN: E234516
+
+    <main id="main-content" class="govuk-main-wrapper" role="main">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <div class="govuk-panel govuk-panel--confirmation ">
+            <h1 class="govuk-panel__title">
+              Report published
+            </h1>
+            <div class="govuk-panel__body">
+              Dylan Adam Armstrong<br/>
+              CRN: E234516
+            </div>
+          </div>
+          <p class="govuk-body">The report is now locked and cannot be edited.</p>
+          <p class="govuk-body">It is published to NDelius.</p>
+          <h2 class="govuk-heading-m">Next steps</h2>
+          <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
+            <li><a href="#" class="govuk-link">Download the report</a></li>
+            <li>Share the report with the court.
+              <ul class="govuk-list govuk-list--bullet">
+                <li>
+                  <p class="govuk-body">
+                    <a href="https://prosecuting.cjscp.org.uk/" class="govuk-link" rel="noreferrer noopener" target="_blank">
+                      Upload to Common Platform (opens in new tab)</a>
+                  </p>
+                </li>
+                <li>
+                  <p class="govuk-body">
+                    <a href="https://courtstore.justice.gov.uk/courtstore/login?returnUrl=%2Fdashboard" class="govuk-link" rel="noreferrer noopener" target="_blank">
+                      Upload to Court Store (opens in new tab)</a>
+                  </p>
+                </li>
+              </ul>
+            </li>
+          </ol>
+          <p class="govuk-body">
+            <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
+          </p>
         </div>
       </div>
-      <p class="govuk-body">The report is now locked and cannot be edited.</p>
-      <p class="govuk-body">It is published to NDelius.</p>
-      <h2 class="govuk-heading-m">Next steps</h2>
-      <ol class="govuk-list govuk-list--number govuk-!-margin-bottom-9">
-        <li><a href="#" class="govuk-link">Download the report</a></li>
-        <li>Share the report with the court.
-          <ul class="govuk-list govuk-list--bullet">
-            <li>
-              <p class="govuk-body">
-                <a href="https://prosecuting.cjscp.org.uk/" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                  Upload to Common Platform (opens in new tab)</a>
-              </p>
-            </li>
-            <li>
-              <p class="govuk-body">
-                <a href="https://courtstore.justice.gov.uk/courtstore/login?returnUrl=%2Fdashboard" class="govuk-link" rel="noreferrer noopener" target="_blank">
-                  Upload to Court Store (opens in new tab)</a>
-              </p>
-            </li>
-          </ul>
-        </li>
-      </ol>
-      <p class="govuk-body">
-        <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
-      </p>
     </main>
-  </div>
 {% endblock %}
