--- a/app/views/6/verification-report/start.html
+++ b/app/views/6/verification-report/start.html
@@ -1,21 +1,16 @@
-{% extends "layouts/main.html" %}
+{% extends "govuk-prototype-kit/layouts/unbranded.html" %}
 
-{% set pageName="Start" %}
+{% set pageName="National Delius - Dylan Adam Armstrong" %}
 
 {% block content %}
+  <style>
+    .govuk-width-container{
+      width: 100%;
+      max-width: 100%;
+    }
+  </style>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-xl">
-      Start page
-    </h1>
-    <p class="govuk-body">Start page for report.</p>
-    <a href="defendant-details" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-      Start report
-      <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
-        <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
-      </svg></a>
-  </div>
-</div>
-
+  <a href="defendant-details.html">
+    <img src="/public/images/NDelius-report-link.png" alt="Ndelius screen showing details for Dylan Adam Armstrong and a link to his report." style="width:100%;"/>
+  </a>
 {% endblock %}
