--- a/app/views/6/verification-report/electronic-monitoring-for-curfew.html
+++ b/app/views/6/verification-report/electronic-monitoring-for-curfew.html
@@ -32,15 +32,17 @@
                     Suitability for unpaid work</a>
               {% endif %}
             </li>
-            <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
+            {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
+              <li class="app-subnav__section-item app-subnav__section-item--current">
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">
                   Suitability for electronic monitoring</a>
-              {% else %}
-                  <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline govuk-link--disabled" href="electronic-monitoring-for-curfew">
-                    Suitability for electronic monitoring</a>
-              {% endif %}
-            </li>
+              </li>
+            {% else %}
+              <li class="app-subnav__section-item">
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline govuk-link--disabled" href="electronic-monitoring-for-curfew">
+                  Suitability for electronic monitoring</a>
+              </li>
+            {% endif %}
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="recommendation">
                 Recommendation</a>
