--- a/app/views/6/verification-report/unpaid-work.html
+++ b/app/views/6/verification-report/unpaid-work.html
@@ -24,15 +24,17 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="essential-information">
                 Essential information</a>
             </li>
-            <li class="app-subnav__section-item">
-              {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
+            {% if (data['verification-report-sections'] == 'unpaidWork') or (data['verification-report-sections'] == 'both')  %}
+              <li class="app-subnav__section-item app-subnav__section-item--current">
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="unpaid-work">
                   Suitability for unpaid work</a>
-              {% else %}
-                  <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline govuk-link--disabled" href="unpaid-work">
-                    Suitability for unpaid work</a>
-              {% endif %}
-            </li>
+                </li>
+            {% else %}
+              <li class="app-subnav__section-item"></li>
+                <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline govuk-link--disabled" href="unpaid-work">
+                  Suitability for unpaid work</a>
+              </li>
+            {% endif %}
             <li class="app-subnav__section-item">
               {% if (data['verification-report-sections'] == 'electronicMonitoring') or (data['verification-report-sections'] == 'both')  %}
                 <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="electronic-monitoring-for-curfew">
