--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,8 +13,13 @@
       <p><a class="govuk-link" href="/6/verification-report/start.html">Prototype</a></p>
       <ul class="govuk-list govuk-list--bullet">
         <li>
+          <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3318">
+            Tech spike to see if its possible to make PDF download in the
+            prototype kit.</a></p>
+        </li>
+        <li>
           <p class="govuk-body"><a class="govuk-link" href="https://dsdmoj.atlassian.net/browse/PIC-3301">
-            Updates to get ready for user research part 2. Also increment to v6.</a></p>
+            Updates to get ready for user research part 2,3 and 4. Also increment to v6.</a></p>
         </li>
       </ul>
     <h2 class="govuk-heading-m">v5</h2>
