--- a/app/views/8/verification-report/guidance.html
+++ b/app/views/8/verification-report/guidance.html
@@ -7,13 +7,22 @@
   Start page
 </h1>
 <div class="govuk-form-group">
+  <p class="govuk-body-l">A verification report is a new kind of pre-sentence advice. This information will help you complete this research task.</p>
   <h2 class="govuk-heading-m" for="what-is-a-verification-report">
     What is a verification report
   </h2>
+  <p class="govuk-body">A verification report is a way to decide whether someone is suitable for either unpaid work or an electronic monitoring curfew.</p>
   <h2 class="govuk-heading-m" for="criteria-verification-report">
     What are the criteria for a verification report?
   </h2>
+  <p class="govuk-body">Someone can be considered for a verification report if they have entered a guilty anticipated plea, have no risk flags in NDelius and something else.</p>
   <h2 class="govuk-heading-m" for="how-to-use-this-service">
     How to use this service
   </h2>
+  <p class="govuk-body">You can complete this form in any order, add information as you get it. We know that some of the checks might not come back quickly, you should save a draft and complete the missing information when you get it.</p>
+  <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+    Start now
+    <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
+      <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z" />
+    </svg></a>
 {% endblock %}
