--- a/app/views/15/pre-sentence-report/pattern-of-offending-and-reposonse-to-supervision.html
+++ b/app/views/15/pre-sentence-report/pattern-of-offending-and-reposonse-to-supervision.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Culpability and risk" %}
+{% set pageName="Pattern of offending and response to supervision" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -20,11 +20,11 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
                 Victim impact assessment</a>
             </li>
-            <li class="app-subnav__section-item">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="pattern-of-offending-and-reposonse-to-supervision.html">
                 Pattern of offending and response to supervision</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
                 Culpability and risk</a>
             </li>
@@ -53,7 +53,7 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="culpability-and-risk" method="post" novalidate>
+        <form action="pattern-of-offending-and-reposonse-to-supervision" method="post" novalidate>
           <span class="govuk-caption-xl">
             Dylan Adam Armstrong CRN: E234516
           </span>
