--- a/app/views/15/pre-sentence-report/preview-report.html
+++ b/app/views/15/pre-sentence-report/preview-report.html
@@ -21,6 +21,10 @@
                 Victim impact assessment</a>
             </li>
             <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="pattern-of-offending-and-reposonse-to-supervision.html">
+                Pattern of offending and response to supervision</a>
+            </li>
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
                 Culpability and risk</a>
             </li>
