--- a/app/views/15/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
+++ b/app/views/15/pre-sentence-report/additional-behaviours-and-lifestyle-considerations.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main.html" %}
 
-{% set pageName="Victim impact assessment" %}
+{% set pageName="Additional behaviours and lifestyle considerations" %}
 
 {% block content %}
   <div class="app-split-pane app-width-container">
@@ -16,7 +16,7 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="offences">
                 Offences</a>
             </li>
-            <li class="app-subnav__section-item app-subnav__section-item--current">
+            <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="victim-impact-assessment">
                 Victim impact assessment</a>
             </li>
@@ -24,8 +24,8 @@
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="pattern-of-offending-and-response-to-supervision">
                 Pattern of offending and response to supervision</a>
             </li>
-            <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behaviours-and-lifestyle-considerations.html">
+            <li class="app-subnav__section-item app-subnav__section-item--current">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behaviours-and-lifestyle-considerations">
                 Additional behaviours and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
@@ -57,54 +57,34 @@
     </div>
     <div class="app-split-pane__content">
       <main id="main-content" class="app-content" role="main">
-        <form action="victim-impact-assessment" method="post" novalidate>
+        <form action="additional-behaviours-and-lifestyle-considerations" method="post" novalidate>
+          <span class="govuk-caption-xl">
+            Dylan Adam Armstrong CRN: E234516
+          </span>
+          <h1 class="govuk-heading-xl">
+            Additional behaviours and lifestyle considerations
+          </h1>
           <div class="govuk-form-group">
-            <span class="govuk-caption-xl">
-              Dylan Adam Armstrong CRN: E234516
-            </span>
-            <h1 class="govuk-heading-xl">
-              Victim impact assessment
-            </h1>
-            <p class="govuk-body">
-              The victim impact statement should be included as part of the CPS
-              pack.</p>
-            <p class="govuk-body">
-              <a class="govuk-link" href="#">
-                <svg class="moj-timeline__document-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 20" width="20" height="16">
-                  <path fill="#1d70b8" d="M9 7V1.5L14.5 7H9zM2 0C.9 0 0 .9 0 2v16c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V6l-6-6H2z" />
-                </svg>
-                CPS pack
-              </a>
-            </p>
-            <details class="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  Help with victim impact assessment
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                <p class="govuk-body">
-                  Summarise the information here so that it can be used to
-                  inform sentencing options later in the report. This may
-                  include things like exclusion zones and can feed into the
-                  risk of serious harm.</p>
-                <p class="govuk-body">
-                  Do not simply restate the facts from the CPS report, or rely
-                  solely on the account provided in the pre-sentence report
-                  interview.</p>
-                <p class="govuk-body">
-                  You may want to consider the defendant's:
-                </p>
-                <ul class="govuk-list govuk-list--bullet">
-                  <li>attitudes</li>
-                  <li>responsibility</li>
-                  <li>circumstances</li>
-                  <li>motivations</li>
-                </ul>
-              </div>
-            </details>
-            <textarea class="govuk-textarea" id="victim-impact-assessment" name="victim-impact-assessment" rows="10" aria-describedby="victim-impact-assessment-hint">{{data['victim-impact-assessment']}}</textarea>
+            <h2 class="govuk-heading-l" for="additional-behaviours">
+              Additional behaviours
+            </h2>
+            <div id="additional-behaviours-hint" class="govuk-hint">
+              Describe any additional behaviours that could have in impact
+              on the proposed sentence.
+            </div>
+            <textarea class="govuk-textarea" id="additional-behaviours" name="additional-behaviours" rows="8" aria-describedby="additional-behaviours-hint">{{data['additional-behaviours']}}</textarea>
           </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+          <div class="govuk-form-group">
+            <h2 class="govuk-heading-l" for="lifestyle-considerations">
+              Lifestyle considerations
+            </h2>
+            <div id="lifestyle-considerations-hint" class="govuk-hint">
+              Describe any lifestyle considerations that could have an
+              impact on the proposed sentence</div>
+            <textarea class="govuk-textarea" id="lifestyle-considerations" name="lifestyle-considerations" rows="8" aria-describedby="lifestyle-considerations-hint">{{data['lifestyle-considerations']}}</textarea>
+          </div>
+          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
           <div class="govuk-button-group">
             <button class="govuk-button" data-module="govuk-button">
               Save and continue
@@ -115,6 +95,13 @@
           </div>
         </form>
       </main>
+    </div>
+    <div class="app-back-to-top app-back-to-top--fixed" data-module="app-back-to-top">
+      <a class="govuk-link govuk-link--no-visited-state app-back-to-top__link" href="#top">
+        <svg role="presentation" focusable="false" class="app-back-to-top__icon" xmlns="http://www.w3.org/2000/svg" width="13" height="17" viewBox="0 0 13 17">
+          <path fill="currentColor" d="M6.5 0L0 6.5 1.4 8l4-4v12.7h2V4l4.3 4L13 6.4z"></path>
+        </svg>Back to top
+      </a>
     </div>
   </div>
 {% endblock %}
