--- a/app/views/15/pre-sentence-report/preview-report.html
+++ b/app/views/15/pre-sentence-report/preview-report.html
@@ -21,8 +21,12 @@
                 Victim impact assessment</a>
             </li>
             <li class="app-subnav__section-item">
-              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="pattern-of-offending-and-reposonse-to-supervision.html">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="pattern-of-offending-and-response-to-supervision">
                 Pattern of offending and response to supervision</a>
+            </li>
+            <li class="app-subnav__section-item">
+              <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="additional-behaviours-and-lifestyle-considerations.html">
+                Additional behaviours and lifestyle considerations</a>
             </li>
             <li class="app-subnav__section-item">
               <a class="app-subnav__link govuk-link govuk-link--no-visited-state govuk-link--no-underline" href="culpability-and-risk">
@@ -916,7 +920,35 @@
                         </table>
                       </div>
                     </div>
-                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                    <div class="govuk-grid-row">
+                      <div class="govuk-grid-column-full">
+                        <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+                        <table class="govuk-table">
+                          <caption class="govuk-table__caption govuk-table__caption--m">
+                            <h2 class="govuk-heading-m report-heading--purple">
+                              Additional behaviours and lifestyle considerations</h2>
+                          </caption>
+                          <tbody class="govuk-table__body">
+                            <tr class="govuk-table__row">
+                              <th scope="row" class="govuk-table__header">Additional behaviours:</th>
+                              <td class="govuk-table__cell">{{data['pattern-of-offending']}}
+                                <br><a class="govuk-link" href="additional-behaviours-and-lifestyle-considerations">
+                                  Change <span class="govuk-visually-hidden">
+                                    Additional behaviours notes</span></a>
+                              </td>
+                            </tr>
+                            <tr class="govuk-table__row">
+                              <th scope="row" class="govuk-table__header">Lifestyle considerations:</th>
+                              <td class="govuk-table__cell">{{data['defendant-known-person-risk']}}
+                                <br><a class="govuk-link" href="additional-behaviours-and-lifestyle-considerations">
+                                  Change <span class="govuk-visually-hidden">
+                                    Lifestyle considerations notes</span></a>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
                     <div class="govuk-grid-row">
                       <div class="govuk-grid-column-full">
                         <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
